--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#f39c12</color>
     <color name="colorPrimaryDark">#d35400</color>
     <color name="colorAccent">#17ab8e</color>
+    <color name="colorWhite" >#ffffff</color>
 </resources>
