--- a/app/src/main/res/layout/activity_where_am_iat.xml
+++ b/app/src/main/res/layout/activity_where_am_iat.xml
@@ -5,11 +5,35 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/colorAccent"
     tools:context="wya.whereyaat.WhereAmIAt">
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_alignParentBottom="true"
-        android:id="@+id/showLocationButton"/>
+        android:fontFamily="sans-serif-condensed"
+        android:textSize="20dp"
+        android:id="@+id/showLocationButton"
+        android:text= "Where are YOU at?"
+        android:textAlignment="center"/>
+   <TextView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:fontFamily="sans-serif-condensed"
+        android:layout_above="@id/showLocationButton"
+        android:textSize="20dp"
+        android:textColor="@color/colorPrimary"
+        android:id="@+id/revealLocation"
+        android:textAlignment="center"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:textSize="60dp"
+        android:textColor="@color/colorPrimary"
+        android:fontFamily="sans-serif-condensed"
+        android:layout_alignParentTop="true"
+        android:text="Let the Squad know where you are!"
+        android:textAlignment="center"/>
 </RelativeLayout>
