--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#f39c12</color>
     <color name="colorPrimaryDark">#d35400</color>
     <color name="colorAccent">#17ab8e</color>
+
+    <color name="onboardingbg1">#2980b9</color>
+    <color name="onboardingbg2">#c0392b</color>
+    <color name="onboardingbg3">#2c3e50</color>
+    <color name="onboardingbg4">#d35400</color>
+    <color name="onboardingbg5">#f39c12</color>
+
+    <color name="black_overlay">#66000000</color>
+    <color name="transparent">@android:color/transparent</color>
 </resources>
