--- a/app/src/main/res/layout/rank_view.xml
+++ b/app/src/main/res/layout/rank_view.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     tools:context="wya.whereyaat.LoginActivity"
-    android:background="@color/colorWhite"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
 
