--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:background="@drawable/bg"
+    android:background="@color/colorPrimary"
     tools:context="wya.whereyaat.LoginActivity">
 
     <TextView
