--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f39c12</color>
-    <color name="colorPrimaryDark">#d35400</color>
-    <color name="colorAccent">#17ab8e</color>
+    <color name="colorPrimary">#d35400</color>
+    <color name="colorPrimaryDark">#873600</color>
+    <color name="colorPrimaryLight">#ff7921</color>
+    <color name="colorPrimaryReallyLight">#ffa76e</color>
+    <color name="colorPrimaryEvenLighter">#ffd5bb</color>
+    <color name="colorAccent">#00d3be</color>
+    <color name="colorAccent2">#0016d3</color>
+    <color name="colorWhite" >#FFFFFF</color>
+    <color name="grey">#838383</color>
+    <color name="darkGrey">#5d5d5d</color>
+    <color name="lightGrey">#a9a9a9</color>
+    <color name="veryLightGrey">#e9e9e9</color>
 
     <color name="onboardingbg1">#2980b9</color>
     <color name="onboardingbg2">#c0392b</color>
