--- a/app/src/main/res/layout/activity_where_am_iat.xml
+++ b/app/src/main/res/layout/activity_where_am_iat.xml
@@ -1,39 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@color/colorAccent"
+    android:background="@color/colorPrimaryEvenLighter"
     tools:context="wya.whereyaat.WhereAmIAt">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        android:fontFamily="sans-serif-condensed"
-        android:textSize="20dp"
-        android:id="@+id/showLocationButton"
-        android:text= "Where are YOU at?"
-        android:textAlignment="center"/>
-   <TextView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:fontFamily="sans-serif-condensed"
-        android:layout_above="@id/showLocationButton"
-        android:textSize="20dp"
-        android:textColor="@color/colorPrimary"
-        android:id="@+id/revealLocation"
-        android:textAlignment="center"
-        />
     <TextView
+        android:id="@+id/whereamiatInstructions"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:textSize="60dp"
-        android:textColor="@color/colorPrimary"
-        android:fontFamily="sans-serif-condensed"
-        android:layout_alignParentTop="true"
-        android:text="Let the Squad know where you are!"
-        android:textAlignment="center"/>
+        android:layout_height="wrap_content"
+        android:text="@string/whereamiatInstructions"
+        android:textColor="@android:color/white"
+        android:background="@color/black_overlay"
+        android:padding="5dp"
+        android:textSize="30sp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/whereamiatInstructions"
+        android:layout_marginTop="10dp"
+        android:id="@+id/rv" />
+
 </RelativeLayout>
