--- a/app/src/main/res/layout/rank_view.xml
+++ b/app/src/main/res/layout/rank_view.xml
@@ -234,4 +234,10 @@
         android:layout_height="wrap_content"
         android:text="Add location"
         android:background="@color/colorAccent"/>
+    <Button
+        android:id="@+id/openMap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open In Map"
+        android:background="@color/colorAccent"/>
 </LinearLayout>
